src/pages/globals.css
@import '../styles/Shimmering.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
input[type='number'] {
  -moz-appearance: textfield;
}

body {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--gray-gray50);
}

/* Scrollbar for Firefox */
* {
  scrollbar-width: thin;
}

/* Scrollbar for other Browsers */
/* Width */
::-webkit-scrollbar {
  width: 8px;
  height: 8px; /* horizontal scrollbar */
}

/* Track */
::-webkit-scrollbar-track {
  background: transparent;
}

::-webkit-scrollbar-track:vertical {
  margin: 2px 0;
}

::-webkit-scrollbar-track:horizontal {
  margin: 0 2px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background-color: var(--scroll-background-default);
  border-radius: 4px;
  border: 2px solid transparent;
  background-clip: padding-box;
}

:root {
  /* color pallete */
  --gray-gray900: #444651;
  --gray-gray800: #595b6a;
  --gray-gray700: #6a6e81;
  --gray-gray600: #7e8399;
  --gray-gray500: #8e93ab;
  --gray-gray400: #9fa3b9;
  --gray-gray300: #b2b5c8;
  --gray-gray200: #c8cbd9;
  --gray-gray100: #dde0e9;
  --gray-gray50: #f2f2f7;

  --blue-blue900: #2239b8;
  --blue-blue800: #1c5bd8;
  --blue-blue700: #146dea;
  --blue-blue600: #0080ff;
  --blue-blue500: #008eff;
  --blue-blue400: #279fff;
  --blue-blue300: #008eff;
  --blue-blue200: #8ac7ff;
  --blue-blue100: #b9dcff;
  --blue-blue50: #e2f1ff;

  --green-green800: #08a200;
  --green-green600: #34c759;
  --green-green400: #56dd6e;
  --green-green100: #cdf0d3;
  --green-green50: #e5f7e8;

  --violet-violet700: #8000ff;
  --violet-violet500: #9225ff;
  --violet-violet400: #a346ff;
  --violet-violet100: #ddbbff;
  --violet-violet50: #f2e4ff;

  --red-red500: #ff3b30;

  --orange-orange700: #ff4c00;
  --red-red50: #ffebee;

  --orange-orange500: #ff8000;
  --orange-orange50: #fffac2;

  --black-black900: #020d17;
  --black-black400: #8e8e93;
  --black-black50: #f5f5f5;

  --white-white900: #ffffff;

  --pink-pink600: #ff007a;
}

@keyframes textAnimation {
  0% {
    transform: translateY(0);
    opacity: 0;
  }
  50% {
    transform: translateY(-50%);
    opacity: 0.5;
  }
  90% {
    transform: translateY(-90%);
    opacity: 1;
  }
  100% {
    transform: translateY(-100%);
    opacity: 0;
  }
}

.animate-text {
  animation: textAnimation 3s linear forwards;
}

.delay-1 {
  animation-delay: 1s;
  animation: textAnimation 4s linear forwards;
}

.delay-2 {
  animation: textAnimation 6s linear forwards;
  animation-delay: 1s;
}

